--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "mocha --recursive --full-trace --exit",
+    "test:unit": "mocha --recursive --full-trace --exit",
+    "pretest:integration:init": "npm run build",
+    "test:integration:init": "sh ./test/scripts/initIntTests.sh",
+    "test:integration": "npm run test:integration:init && cucumber-js --config ./test/config/cucumber.js",
+    "pretest": "npm run build",
+    "test": "npm run test:unit && npm run test:integration",
     "posttest": "npm run lint && npm run format:check",
     "coverage": "nyc mocha && nyc report --reporter=html && nyc report --reporter=json-summary",
     "lcov": "nyc mocha && nyc report --reporter=lcov",
@@ -15,7 +20,6 @@
     "format:check": "prettier --check \"**/*.{js,json,jsx,md,ts,tsx,html}\"",
     "build": "npm run clean && tsc",
     "prepublishOnly": "npm run build",
-    "pretest": "npm run build",
     "watch": "tsc --watch",
     "clean": "rm -fr dist/*"
   },
@@ -38,6 +42,7 @@
   ],
   "homepage": "https://github.com/bbc/cloudwatch-producer",
   "devDependencies": {
+    "@cucumber/cucumber": "^8.10.0",
     "@types/chai": "^4.3.4",
     "@types/debug": "^4.1.7",
     "@types/mocha": "^10.0.1",
@@ -59,10 +64,11 @@
     "zod": "^3.20.6"
   },
   "peerDependencies": {
-    "@aws-sdk/client-cloudwatch": "^3.282.0"
+    "@aws-sdk/client-cloudwatch": "^3.282.0",
+    "zod": "^3.20.6"
   },
   "mocha": {
-    "spec": "test/**/**/*.test.ts",
+    "spec": "test/tests/**/**/*.test.ts",
     "require": "ts-node/register"
   },
   "nyc": {
