--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -30,6 +30,6 @@ jobs:
       - name: Report Coverage
         uses: paambaati/codeclimate-action@v3.2.0
         env:
-          CC_TEST_REPORTER_ID: b
+          CC_TEST_REPORTER_ID: f7c07d56b04dcc76d09b2d9991d246ba1448eb0c8ea55dc9d0d00ae6d752adab
         with:
           coverageCommand: npm run lcov
